refactor [data]: updated data

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
         "title": "BolangTravel App (Frontend)",
         "description": "BolangTravel is an application for travel agents that allows customers to easily search, book, and manage their travel itineraries.",
         "tech-stack":"React Js, Tailwind CSS, Zustand",
-        "url": "https://https://tugasakhiraplikasiwisata.tech/"
+        "url": "https://tugasakhiraplikasiwisata.tech/"
       },
       {
         "id": 5,
